[package]
name = "mstr"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "MStr is a 2-word, immutable Cow<str>"
authors = ["Sky <sky@sky9.dev>"]
repository = "https://github.com/Sky9x/mstr"
license = "MIT OR Apache-2.0"
keywords = ["mstr", "cow", "str", "string", "small"]
categories = ["data-structures", "rust-patterns", "memory-management", "no-std", "compression"]
exclude = [".github"]
