[package]
name = "mstr"
version = "0.1.0"
edition = "2021"
rust-version = "1.65" # keep in sync with .github/workflows/ci.yml
description = "MStr is a 2-word, immutable Cow<str>"
authors = ["Sky <sky@sky9.dev>"]
repository = "https://github.com/Sky9x/mstr"
license = "MIT OR Apache-2.0"
keywords = ["mstr", "cow", "str", "string", "small"]
categories = ["data-structures", "rust-patterns", "memory-management", "no-std"]
exclude = [".github"]

[features]
default = []
# implements serde's Serialize & Deserialize for MStr
serde = ["dep:serde"]

[dependencies.serde]
version = "1"
optional = true
default-features = false
features = ["alloc"]

[dev-dependencies]
serde_test = "1"
serde_json = "1"
